[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://art/icon.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

[node name="Player" type="Area2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Recovery" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Upgrade" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="area_shape_entered" from="." to="." method="_on_Player_area_shape_entered"]
[connection signal="timeout" from="Recovery" to="." method="_on_Recovery_timeout"]
[connection signal="timeout" from="Upgrade" to="." method="_on_Upgrade_timeout"]
